<resources>
    <string name="app_name">Sahih Bukhari</string>
    <string name="action_settings">Settings</string>

    <string name="About_us">Muhammad Ali Apps \n <b>email:</b> alihamuh@gmail.com \n <b>phone:</b> +92-311-075-8144</string>

    <string name="hadith_hint">Hadith #</string>
    <string name="chapter_hint">Chapter #</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_go">Go</string>

    <string name="Reference_one_Title">Reference</string>
    <string name="Reference_two_Title">In-book-reference</string>
    <string name="Reference_three_Title">USC-MSA web (English) reference</string>
    <string name="title_activity_main_hadith_contentpage">MainHadithContentpage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>



    <string name="start">Start from Begining</string>
    <string name="resume">Resume</string>
    <string name="share">Share</string>
    <string name="rate">Rate Us</string>
    <string name="settings">Settings</string>
    <string name="page">Search Hadith By Chapter</string>
    <string name="international">Search Hadith By International #</string>
    <string name="donate">Donate</string>
    <string name="about">About Us</string>
    <string name="bookmark">Bookmark</string>



    <string name="pref_title_notifications">Settings</string>
    <string name="pref_header_about">About</string>
    <string name="summary_about">We are a team of like-minded people, specialized in development of Android App Development creating new trends across the app space. Glad to Help in anyway!</string>
    <string name="app_version">1.0</string>
    <string name="summary_support">Got any queries? We are happy to help!</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="title_version">Version</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="title_nightmode_screen">NightMode</string>
    <string name="Nightmode_on_off">nightmode_is_on</string>
    <string name="key_send_feedback">key_send_feedback</string>




    <!-- fake ads-->
    <!--string name="main_inter_ad">ca-app-pub-3940256099942544/1033173712</string>
    <string name="main_banner_ad">ca-app-pub-3940256099942544/6300978111</string>
    <string name="page_banner_ad">ca-app-pub-3940256099942544/6300978111</string>
    <string name="ad_app_id">ca-app-pub-3940256099942544~3347511713</string-->

    <!--orignal ads-->
    <string name="main_inter_ad">ca-app-pub-4487355027048563/9122501072</string>
    <string name="main_banner_ad">ca-app-pub-4487355027048563/4221528183</string>
    <string name="page_banner_ad">ca-app-pub-4487355027048563/3646813110</string>
    <string name="ad_app_id">ca-app-pub-4487355027048563~9601368444</string>
</resources>
